[project]
name = "email-env"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [{name = "Manmadha"}]
dependencies = [
    "openenv-core",
    "pydantic",
    "openai"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project.scripts]
server = "server.app:main"